@@ -26,6 +26,9 @@ Cookies in HTTP responses from the client side are now retrievable on the HttpRe
 
 Micronaut 2.1 introduces the concept of a default environment. One or more default environments can be set and they will apply if no other environments are explicitly specified. See the <<environments, environments documentation>> for information on how to use this new feature.
 
+==== @Order Annotation
+
+The ann:core.annotation.Order[] annotation has been added to support supplying bean order for factory methods or for those who prefer the use of annotations over the api:core.order.Ordered[] interface.
 
 === Module Upgrades
 
